--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -7,8 +7,8 @@
     android:layout_height="match_parent"
     android:background="@color/colorBg"
     android:orientation="vertical"
-    android:paddingLeft="24dp"
-    android:paddingRight="24dp"
+    android:paddingLeft="@dimen/small"
+    android:paddingRight="@dimen/small"
     android:weightSum="100"
     tools:context=".ui.login.LoginFragment">
 
@@ -17,8 +17,10 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginLeft="80dp"
-        android:layout_marginRight="80dp"
+        android:layout_marginStart="@dimen/logo_margin"
+        android:layout_marginEnd="@dimen/logo_margin"
+        android:layout_marginLeft="@dimen/logo_margin"
+        android:layout_marginRight="@dimen/logo_margin"
         android:layout_weight="54"
         android:src="@drawable/logo" />
 
@@ -27,9 +29,9 @@
         android:id="@+id/layoutUsername"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="@dimen/medium"
+        android:layout_marginRight="@dimen/medium"
+        android:layout_marginBottom="@dimen/mini"
         android:layout_weight="8"
         app:hintEnabled="false">
 
@@ -48,9 +50,9 @@
         android:id="@+id/layoutPassword"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="@dimen/medium"
+        android:layout_marginRight="@dimen/medium"
+        android:layout_marginBottom="@dimen/mini"
         android:layout_weight="8"
         app:hintEnabled="false"
         app:passwordToggleEnabled="true">
@@ -63,18 +65,6 @@
             android:inputType="textPassword" />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <!--<EditText android:id="@+id/inputUsername"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="0dp"-->
-    <!--android:layout_weight="8"-->
-    <!--android:layout_marginLeft="30dp"-->
-    <!--android:layout_marginRight="30dp"-->
-    <!--android:layout_marginBottom="10dp"-->
-    <!--android:inputType="text"-->
-    <!--android:hint="@string/username"-->
-    <!--android:background="@drawable/login_text_background"/>-->
-
-
     <View
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -84,8 +74,8 @@
         android:id="@+id/btnLogin"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
+        android:layout_marginLeft="@dimen/medium"
+        android:layout_marginRight="@dimen/medium"
         android:layout_weight="8"
         android:background="@drawable/login_btn_background"
         android:text="@string/login"
