--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,9 @@
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="logo_margin">80dp</dimen>
+    <dimen name="mini">8dp</dimen>
+    <dimen name="small">16dp</dimen>
+    <dimen name="medium">32dp</dimen>
+    <dimen name="large">64dp</dimen>
 </resources>
