--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,20 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/home"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.home.HomeFragment">
+    tools:context=".ui.home.HomeFragment"
+    android:orientation="vertical"
+    android:background="#333"
+    android:padding="10dp">
 
-    <TextView
-        android:id="@+id/message"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="HomeFragment"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <include layout="@layout/item_guilde" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/mini"
+            android:layout_marginBottom="@dimen/mini"
+            android:layout_marginStart="@dimen/medium"
+            android:layout_marginLeft="@dimen/medium"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:text="Top Guildes"
+            android:textColor="@color/colorWhite"
+            android:textSize="@dimen/textH2" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginTop="@dimen/mini"
+            android:layout_marginBottom="@dimen/mini"
+            android:layout_marginEnd="@dimen/medium"
+            android:layout_marginRight="@dimen/medium"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:text="Veiw All"
+            android:textColor="@color/colorWhite"
+            android:textSize="@dimen/textH2" />
+    </RelativeLayout>
+
+    <com.airbnb.epoxy.EpoxyRecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="@dimen/mini"
+        android:padding="@dimen/mini"/>
+</LinearLayout>
