--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,8 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".ui.home.HomeFragment"
     android:orientation="vertical"
-    android:background="#333"
-    android:padding="10dp">
+    android:background="@color/colorSurface">
 
     <include layout="@layout/item_guilde" />
 
@@ -25,10 +24,10 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
             android:text="Top Guildes"
-            android:textColor="@color/colorWhite"
             android:textSize="@dimen/textH2" />
 
         <TextView
+            android:id="@+id/tvViewAll"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
@@ -38,14 +37,17 @@
             android:layout_marginRight="@dimen/medium"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:text="Veiw All"
-            android:textColor="@color/colorWhite"
+            android:text="@string/view_all"
             android:textSize="@dimen/textH2" />
     </RelativeLayout>
 
     <com.airbnb.epoxy.EpoxyRecyclerView
+        android:id="@+id/rvTopGuildes"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="@dimen/mini"
+        android:layout_marginStart="@dimen/small"
+        android:layout_marginLeft="@dimen/small"
+        android:layout_marginEnd="@dimen/small"
+        android:layout_marginRight="@dimen/small"
         android:padding="@dimen/mini"/>
 </LinearLayout>
