--- a/app/src/main/res/layout/item_guilde.xml
+++ b/app/src/main/res/layout/item_guilde.xml
@@ -47,6 +47,7 @@
                 android:text="1250 / 3000"
                 android:textColor="@color/colorH2"
                 android:textSize="@dimen/textH2"
+                android:textStyle="bold"
                 android:layout_marginStart="2dp" />
 
             <TextView
@@ -56,7 +57,10 @@
                 android:layout_marginRight="@dimen/small"
                 android:layout_marginEnd="@dimen/small"
                 android:layout_marginTop="@dimen/mini"
-                android:text="Nocere solite ducunt ad gratis olla. Sunt cannabises desiderium lotus, flavum accentores."
+                android:layout_marginLeft="@dimen/tiny"
+                android:layout_marginStart="@dimen/tiny"
+                android:maxLines="2"
+                android:text="Nocere solite ducunt ad gratis olla. entores."
                 android:textColor="@color/colorH3"
                 android:textSize="@dimen/textH3" />
 
