--- a/app/src/main/res/menu/drawer_actions.xml
+++ b/app/src/main/res/menu/drawer_actions.xml
@@ -3,11 +3,11 @@
 
 
     <item
-        android:id="@+id/home_navigation_menu_item"
+        android:id="@+id/homeFragment"
         android:icon="@drawable/ic_home"
         android:title="@string/home" />
     <item
-        android:id="@+id/guilde_navigation_menu_item"
+        android:id="@+id/guildeDetailFragment"
         android:icon="@drawable/ic_guilde"
         android:title="@string/my_guilde" />
 
