--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,12 @@
     <color name="colorH1">#333333</color>
     <color name="colorH2">#7b7b7b</color>
     <color name="colorH3">#a1a1a1</color>
+    <color name="white">#fff</color>
+    <color name="contributionBg">#49BEFF</color>
+    <color name="pointsBg">#65DCE5</color>
+    <color name="headings">#3797CF</color>
+    <color name="solidCircle">#AAFFFFFF</color>
+    <color name="circleBorder">#50FFFFFF</color>
+    <color name="gradEnd">#67EFC8</color>
+    <color name="gradStart">#63C9FF</color>
 </resources>
