--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/itemGuilde"
+    android:id="@+id/itemUser"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -33,19 +33,19 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/tvGuildeName"
+                android:id="@+id/tvUserFullName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="GuildeName"
+                android:text="Full Name"
                 android:textColor="@color/colorH1"
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/tvGuildePoints"
+                android:id="@+id/tvUserSite"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="1dp"
-                android:text="15365"
+                android:text="Rabat"
                 android:textColor="@color/colorH2" />
 
         </LinearLayout>
