--- a/app/src/main/res/layout/item_submission.xml
+++ b/app/src/main/res/layout/item_submission.xml
@@ -33,7 +33,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/tvContribution"
+                android:id="@+id/tvSubmissionSubject"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Contribution name "
@@ -41,7 +41,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/tvTypeContribution"
+                android:id="@+id/tvTimeSubmission"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="1dp"
