--- a/app/src/main/res/layout/view_loading.xml
+++ b/app/src/main/res/layout/view_loading.xml
@@ -25,6 +25,7 @@
         android:layout_height="wrap_content"
         tools:text="Loading ..."
         android:gravity="center"
+        android:textColor="@color/white"
         android:layout_marginTop="16dp"/>
 
 </LinearLayout>
