--- a/app/src/main/res/drawable/login_text_background.xml
+++ b/app/src/main/res/drawable/login_text_background.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="50dp"/>
+    <corners android:radius="6dp"/>
+    <stroke android:color="@color/colorPrimary" android:width="1dp"/>
     <solid android:color="@color/colorWhite"/>
     <padding android:left="20dp" android:right="20dp" android:top="18dp" android:bottom="15dp"/>
 </shape>
