--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/home"
@@ -10,124 +10,146 @@
     tools:context=".ui.profile.ProfileFragment">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
         android:background="@color/colorH1"
         app:cardBackgroundColor="@color/colorPrimary"
-        app:cardCornerRadius="1dp">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:padding="25dp">
+            android:padding="@dimen/medium">
 
-            <LinearLayout
+            <TextView
+                android:id="@+id/tvProfileFName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:padding="10dp"
-                android:textColor="@color/colorH2"
-                android:textSize="@dimen/textH2">
+                android:layout_marginStart="@dimen/small"
+                android:layout_marginLeft="@dimen/small"
+                android:layout_marginEnd="@dimen/mini"
+                android:layout_marginRight="@dimen/mini"
+                android:textColor="@color/white"
+                android:textSize="@dimen/textH2"
+                app:layout_constrainedWidth="true"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/guideline"
+                app:layout_constraintHorizontal_bias="1"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="Amine" />
 
-                <TextView
-                    android:id="@+id/tvProfileFName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="5dp"
-                    android:layout_marginRight="5dp"
-                    android:text="Amine"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/textH2" />
+            <TextView
+                android:id="@+id/tvProfileLName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/mini"
+                android:layout_marginLeft="@dimen/mini"
+                android:layout_marginEnd="@dimen/small"
+                android:layout_marginRight="@dimen/small"
+                android:textColor="@color/white"
+                android:textSize="@dimen/textH2"
+                app:layout_constrainedWidth="true"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0"
+                app:layout_constraintStart_toStartOf="@+id/guideline"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="Karimi" />
 
-                <TextView
-                    android:id="@+id/tvProfileLName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Karimi"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/textH2" />
-
-            </LinearLayout>
-
-        </LinearLayout>
-
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintGuide_percent="0.5"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
+    <TextView
+        android:id="@+id/tvProfileGuildeName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/small"
+        android:contentDescription="@string/app_name"
+        android:textColor="@color/white"
+        android:textSize="@dimen/textH1"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardView"
+        tools:text="Belier" />
+
     <LinearLayout
+        android:id="@+id/linearLayout3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/mini"
+        android:background="@drawable/bg_points"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:padding="@dimen/mini"
+        android:textColor="@color/colorH2"
+        android:textSize="@dimen/textH2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvProfileGuildeName">
+
+        <TextView
+            android:id="@+id/tvProfileGuildePoints"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorH2"
+            android:textSize="@dimen/textH2" />
+
+        <View
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/mini"
+            android:layout_marginRight="@dimen/mini"
+            android:background="@drawable/line" />
+
+        <ImageView
+            android:layout_width="@dimen/width_height_icon"
+            android:layout_height="@dimen/width_height_icon"
+            android:contentDescription="@string/app_name"
+            android:src="@drawable/ic_star" />
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/small"
         android:layout_marginLeft="@dimen/small"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="@dimen/small"
         android:layout_marginRight="@dimen/small"
-        android:gravity="center"
-        android:orientation="vertical">
+        android:layout_marginBottom="@dimen/mini"
+        android:text="@string/your_contributions"
+        android:textColor="@color/white"
+        android:textSize="@dimen/textH2"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
 
-        <TextView
-            android:id="@+id/tvProfileGuildeName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:contentDescription="@string/app_name"
-            android:textColor="@color/white"
-            android:textSize="@dimen/textH1"
-            android:textStyle="bold" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/bg_points"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:padding="@dimen/mini"
-            android:textColor="@color/colorH2"
-            android:textSize="@dimen/textH2">
-
-            <TextView
-                android:id="@+id/tvProfileGuildePoints"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/colorH2"
-                android:textSize="@dimen/textH2" />
-
-            <View
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:background="@drawable/line" />
-
-            <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:contentDescription="@string/app_name"
-                android:src="@drawable/ic_star" />
-
-        </LinearLayout>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/small"
-            android:layout_marginBottom="@dimen/mini"
-            android:text="@string/tv_vos_contributions"
-            android:textColor="@color/white"
-            android:textSize="@dimen/textH2" />
-
-
-    </LinearLayout>
     <com.airbnb.epoxy.EpoxyRecyclerView
         android:id="@+id/rvProfileContributions"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginStart="@dimen/small"
         android:layout_marginLeft="@dimen/small"
         android:layout_marginEnd="@dimen/small"
+        android:layout_marginTop="@dimen/mini"
         android:layout_marginRight="@dimen/small"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        tools:itemCount="5"
         tools:listitem="@layout/item_submission" />
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
