--- a/app/src/main/res/layout/item_submission.xml
+++ b/app/src/main/res/layout/item_submission.xml
@@ -1,55 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/itemContribution"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginBottom="10dp"
-    app:cardCornerRadius="5dp">
+    android:layout_marginBottom="@dimen/mini"
+    app:cardCornerRadius="@dimen/item_corner_radius">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="15dp">
+        android:padding="@dimen/item_linear_padding">
 
         <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginTop="4dp"
+            android:id="@+id/imageView"
+            android:layout_width="@dimen/width_height_icon"
+            android:layout_height="@dimen/width_height_icon"
             android:contentDescription="@string/app_name"
-            android:src="@drawable/ic_guilde" />
+            android:src="@drawable/ic_guilde"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <View
+            android:id="@+id/view"
             android:layout_width="1dp"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:background="@drawable/line" />
+            android:layout_height="0dp"
+            android:layout_marginLeft="@dimen/small"
+            android:background="@drawable/line"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/imageView"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0"
+            android:layout_marginStart="@dimen/small" />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/tvSubmissionSubject"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_marginStart="@dimen/small"
+            android:layout_marginLeft="@dimen/small"
+            android:textColor="@color/colorH1"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/tvTimeSubmission"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/view"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Contribution Subject" />
 
-            <TextView
-                android:id="@+id/tvSubmissionSubject"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Contribution name "
-                android:textColor="@color/colorH1"
-                android:textStyle="bold" />
+        <TextView
+            android:id="@+id/tvTimeSubmission"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/small"
+            android:layout_marginLeft="@dimen/small"
+            android:textColor="@color/colorH2"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0"
+            app:layout_constraintStart_toEndOf="@+id/view"
+            app:layout_constraintTop_toBottomOf="@+id/tvSubmissionSubject"
+            tools:text="Crée le 05/03 a 12h31" />
 
-            <TextView
-                android:id="@+id/tvTimeSubmission"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="1dp"
-                android:text="cree le 2020-03-05"
-                android:textColor="@color/colorH2" />
-
-        </LinearLayout>
-
-    </LinearLayout>
-
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
