--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,4 +18,5 @@
     <dimen name="width_height_icon">30dp</dimen>
     <dimen name="item_corner_radius">5dp</dimen>
     <dimen name="item_linear_padding">15dp</dimen>
+    <dimen name="radius_cardview_admin_panel">4dp</dimen>
 </resources>
